--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@atlaskit/drag-and-drop": "^0.15.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
